5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1838_1276.log
== TEST (2019-06-24 10:09:05) 
-- CODE:
from numpy import*
from numpy linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(0, 7):
	vet[i] = sum(mat[:, i])
	
for i in range(0, 7):
	if(vet[i] ==  max(vet)):
		print(i + 1)
-- ERROR:
File "XXXX", line 2
    from numpy linalg import*
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:09:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(0, 7):
	vet[i] = sum(mat[:, i])
	
for i in range(0, 7):
	if(vet[i] ==  max(vet)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:10:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(7):
	vet[i] = sum(mat[:, i])
	
for i in range(7):
	if(vet[i] ==  max(vet)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:10:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(7):
	vet[i] = sum(mat[:, i])
	
for i in range(7):
	if(vet[i] ==  max(vet)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:11:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(7):
	vet[i] = sum(mat[:,i])
	
for i in range(7):
	if(vet[i] ==  max(vet)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:13:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(7):
	vet[i] = sum(mat[:,j])
	
for i in range(7):
	if(vet[i] ==  max(vet)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:13:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(7):
	vet[i] = sum(mat[:,i])
	
for i in range(7):
	if(vet[i] ==  max(vet)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:14:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(7):
	vet[i] = sum(mat[:,i])
	
for i in range(7):
	if(vet[i] ==  max(vet)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:15:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(7):
	vet[i] = sum(mat[i,:])
	
for i in range(7):
	if(vet[i] ==  max(vet)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:19:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(7):
	if vet[i] == max(vet):
		if(i + 1)== 1:
			print(1)
		elif(i + 1) == 2:
			print(2)
		elif(i + 1) == 3:
			print(3)
		elif(i + 1) == 4:
			print(4)
		elif(i + 1) == 5:
			print(5)
		elif(i + 1) == 6:
			print(6)
		else:
			print(7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:20:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(7):
	if vet[i] == max(vet):
		if(i + 1)== 1:
			print(1)
		elif(i + 1) == 2:
			print(2)
		elif(i + 1) == 3:
			print(3)
		elif(i + 1) == 4:
			print(4)
		elif(i + 1) == 5:
			print(5)
		elif(i + 1) == 6:
			print(6)
		else:
			print(7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:20:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(7):
	if vet[i] =! max(vet):
		if(i + 1) == 1:
			print(1)
		elif(i + 1) == 2:
			print(2)
		elif(i + 1) == 3:
			print(3)
		elif(i + 1) == 4:
			print(4)
		elif(i + 1) == 5:
			print(5)
		elif(i + 1) == 6:
			print(6)
		else:
			print(7)
-- ERROR:
File "XXXX", line 9
    if vet[i] =! max(vet):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:20:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(7):
	if vet[i] != max(vet):
		if(i + 1) == 1:
			print(1)
		elif(i + 1) == 2:
			print(2)
		elif(i + 1) == 3:
			print(3)
		elif(i + 1) == 4:
			print(4)
		elif(i + 1) == 5:
			print(5)
		elif(i + 1) == 6:
			print(6)
		else:
			print(7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:22:46) 
-- CODE:
from numpy import*
from numpy linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(0, 7):
	vet[i] = sum(mat[:, i])
	
for i in range(0, 7):
	if vet[i] == max(vet):
		print(i + 1)
-- ERROR:
File "XXXX", line 2
    from numpy linalg import*
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:22:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(0, 7):
	vet[i] = sum(mat[:, i])
	
for i in range(0, 7):
	if vet[i] == max(vet):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:40:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(0, 7):
	vet[i] = sum(mat[:, i])
	
for i in range(0, 7):
	if vet[i] == max(vet):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:51:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(0, dtype=int)

for i in range(0, 7):
	vet[i] = sum(mat[:, i])
	
for i in range(0, 7):
	if vet[i] == max(vet):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:53:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(7, dtype=int)

for i in range(0, 7):
	vet[i] = sum(mat[:, i])
	
for i in range(0, 7):
	if vet[i] == max(vet):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:55:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(7, dtype=int)

for i in range(0, 7):
	vet[i] = sum(mat[:,i])
	
for i in range(0, 7):
	if vet[i] == max(vet):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:55:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(7, dtype=int)

for i in range(7):
	vet[i] = sum(mat[:,i])
	
for i in range(7):
	if vet[i] == max(vet):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 12:57:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matiz: ")))

vet = zeros(7, dtype=int)

for i in range(7):
	vet[i] = sum(mat[:,i])
	
for i in range(7):
	if vet[i] == max(vet):
		print(i + 1)
-- EXECUTION TIME:
1.17634
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
